MH-2433: corrected alignment accoring MH-2433 (aklassen)
git-svn-id: https://opencast.jira.com/svn/MH/trunk@6727 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -203,7 +203,7 @@ select { font-size:1.15em; }
   display: none !important;
 }
 
-#category-selector-container {float:left;width:650px;margin-top:10px;margin-bottom:10px;}
+#category-selector-container {float:left;width:650px;margin:10px 0px 10px 10px;}
 .category-selector {margin:0px;margin-bottom:10px;}
 .category-selector li {float:left;list-style:none;}
 .category-selector-item {}
